--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Welding Career</a></li>
+            <li><a href="work.html">Computer science Career</a></li>
         </ul>
     </nav>
     <section id="leftColumn">
     <h2>About Me</h2>
     <p>Hi, I'm Sanjay Ramesh! I'm a Computer Science major and a student at Cerritos College. I have a strong passion for Computer Information Systems (CIS) and enjoy exploring technology and programming. In addition to my studies, I work part-time as a student ambassador at Cerritos College, where I help represent the college and assist prospective students. I’m excited to build a future in tech and continuously learn new skills!
     </p>
-    <img src="image/coding project.png.jpg" alt="Sanjay Ramesh coding" style="width:600px;height:500px"> 
+    <img src="image/coding project.jpg" alt="Sanjay Ramesh coding" style="width:600px;height:500px"> 
     </section>
     <section id="rightColumn">
     <h2>When I have free time</h2>
